--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
+    "test:fork": "hardhat test --network hardhat",
     "typechain": "hardhat typechain",
     "create": "graph create stevyhacker/nft-mint --node https://api.thegraph.com/deploy/",
     "create-local": "graph create stevyhacker/nft-mint --node http://127.0.0.1:8020",
