--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hardhat-gas-reporter": "^1.0.4",
     "lint-staged": "^11.2.6",
     "mocha": "^9.1.3",
+    "pancakeswap-peripheral": "^1.1.0-beta.0",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "shelljs": "^0.8.4",
@@ -86,6 +87,7 @@
     "create": "graph create stevyhacker/nft-mint --node https://api.thegraph.com/deploy/",
     "create-local": "graph create stevyhacker/nft-mint --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
-    "build": "graph build"
+    "build": "graph build",
+    "verify": "hardhat verify --network bsc 0xb1871564612243d34532fcd4946737974457661a"
   }
 }
