--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:network": "hardhat run scripts/deploy.ts --network",
     "deploy:network:localhost": "hardhat run scripts/deploy.ts --network localhost",
+    "upgrade:contract": "hardhat run scripts/upgradeContract.ts --network",
     "fork": "hardhat node & disown",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
     "lint:sol": "solhint --fix --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
