--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "deploy": "hardhat run scripts/deploy.ts",
     "deploy:network": "hardhat run scripts/deploy.ts --network",
     "deploy:network:localhost": "hardhat run scripts/deploy.ts --network localhost",
-    "upgrade:contract": "hardhat run scripts/upgradeContract.ts --network",
+    "upgrade:contract": "hardhat compile && hardhat upgrade:contract",
+    "deploy:nfts": "hardhat compile && hardhat deploy:nfts",
     "fork": "hardhat node & disown",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
     "lint:sol": "solhint --fix --config ./.solhint.json \"contracts/**/*.sol\"",
