--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ethers": "^5.5.2",
     "fs-extra": "^10.0.0",
     "hardhat": "^2.8.0",
+    "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.6",
     "lint-staged": "^12.1.4",
     "mocha": "^9.1.3",
@@ -92,6 +93,7 @@
     "test": "hardhat test",
     "test:fork": "hardhat test --network hardhat",
     "typechain": "hardhat typechain",
+    "docgen": "hardhat docgen",
     "create": "graph create stevyhacker/nft-mint --node https://api.thegraph.com/deploy/",
     "create-local": "graph create stevyhacker/nft-mint --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
