--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "airdrop:network:localhost": "hardhat run scripts/airdrop.ts --network hardhat",
     "upgrade:contract": "hardhat compile && hardhat upgrade:contract",
     "deploy:nfts": "hardhat compile && hardhat deploy:nfts",
+    "deploy:nfts:localhost": "hardhat compile && hardhat deploy:nfts --chain localhost --network localhost",
+    "deploy:nfts:prd": "hardhat compile && hardhat deploy:nfts --chain mainnet --network bsc",
     "fork": "hardhat node & disown",
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
     "lint:sol": "solhint --fix --config ./.solhint.json \"contracts/**/*.sol\"",
