--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ node_modules
 .env
 coverage
 coverage.json
-# typechain
+typechain
 typechain-types
 
 #Hardhat files
@@ -10,7 +10,6 @@ cache
 artifacts
 
 .idea/
-.openzeppelin/
 
 package-lock.json
 
