feat: contract Upgraded

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "deploy:network": "hardhat run scripts/deploy.ts --network",
     "deploy:network:localhost": "hardhat run scripts/deploy.ts --network localhost",
     "airdrop:network:localhost": "hardhat run scripts/airdrop.ts --network hardhat",
-    "upgrade:contract": "hardhat compile && hardhat upgrade:contract",
+    "upgrade:contract:localhost": "hardhat compile && hardhat upgrade:contract",
+    "upgrade:store:production": "hardhat compile && hardhat upgrade:contract --name mafastore --address 0xF2364a7F500A755F28800A752dC5bFEC768Dd75E --network bsc",
     "deploy:nfts": "hardhat compile && hardhat deploy:nfts",
     "deploy:nfts:localhost": "hardhat compile && hardhat deploy:nfts --chain localhost --network localhost",
     "deploy:nfts:prd": "hardhat compile && hardhat deploy:nfts --chain mainnet --network bsc",
