--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
+    "erc721a": "^4.1.0",
+    "erc721a-upgradeable": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -51,7 +53,9 @@
     "hardhat": "^2.9.2",
     "hardhat-docgen": "^1.3.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "keccak256": "^1.0.6",
     "lint-staged": "^12.1.4",
+    "merkletreejs": "^0.2.32",
     "mocha": "^9.1.3",
     "pancakeswap-peripheral": "^1.1.0-beta.0",
     "prettier": "^2.5.1",
@@ -105,7 +109,7 @@
     "verify": "hardhat verify",
     "slither:log": "python3 -m slither . --ignore-compile --filter-paths \"node_modules\" --disable-color > slither-audit.txt 2>&1",
     "slither:summary": "python3 -m slither . --ignore-compile --filter-paths \"node_modules\" --print human-summary",
-    "slither": "python3 -m slither . --ignore-compile --filter-paths \"node_modules|MafaCoin.sol|TimeLockedWallet.sol\"",
+    "slither": "slither ./contracts/MafagoldAction/Minter.sol --ignore-compile --solc-remaps '@openzeppelin=node_modules/@openzeppelin @chainlink=node_modules/@chainlink erc721a-upgradeable=node_modules/erc721a-upgradeable' --exclude naming-convention,external-function,low-level-calls",
     "generate:wallets": "ts-node scripts/createRandomWallets.ts"
   },
   "dependencies": {
