ci: configure ethereum network on hardhat config

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MNEMONIC="BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA BLA"
 ALCHEMY_KEY=""
 CHAINSTACK_PROVIDER=""
 BSCSCAN_API_KEY="ABC123ABC123ABC123ABC123ABC123ABC1"
+ETHSCAN_API_KEY="ABC123ABC123ABC123ABC123ABC123ABC1"
