--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
     "deploy": "hardhat run scripts/deployMafacoin.ts",
     "deploy:genesis": "hardhat run scripts/deployMafagafo.ts",
+    "update:whitelist": "hardhat run scripts/updateWhitelist.ts",
     "deploy:network": "hardhat run scripts/deploy.ts --network",
     "deploy:network:localhost": "hardhat run scripts/deploy.ts --network localhost",
     "airdrop:network:localhost": "hardhat run scripts/airdrop.ts --network hardhat",
